# nana.wasm.rs

./: .gitignore  Cargo.toml  LICENSE  Readme.md  TODO.md  flake.nix  package-lock.json  package.json  result
.cargo/: config.toml
docs/: learn_x_in_y_minutes.nana
docs/grammar/: index.md  ui.ebnf
docs/repl/: index.html  learn_x_in_y_minutes.nana
docs/repl/assets/: cssMode-BESZxN38.js  cssMode-BFz6LqD6.js  cssMode-BLOAtw4r.js  cssMode-BNxWZLgd.js  cssMode-Bj33pYO4.js  cssMode-CSsxf4UE.js  cssMode-CUMjhrSX.js  cssMode-CXIOP8OW.js  cssMode-CgcCP1Qi.js  cssMode-CimZW4WM.js  (+329 more)
examples/: abillion.nana  abillion.py  abillion.rb  fizzbuzz.nana  learn_x_in_y_minutes.nana  pipe.nana  shadowing.nana  stack_overflow.yaml  standard_library.nana  threads.nana  vararg_macros.nana
nix/: run  shell
repl/: index.html  package-lock.json  package.json  style.css  vite.config.js
repl/src/: main.ts
scripts/: build  build-wasi  dev-web-repl  preview-github-pages  release-repl  run  size  sloc  test  transpile  watch  wit
src/: bindings.rs  environment.rs  environment_test.rs  errors.rs  eval.rs  eval_test.rs  expression_test.rs  expressions.rs  fizzbuzz_test.rs  helpers.rs  lib.rs  process.rs  process_test.rs  standard_library.rs  standard_library_test.rs
src/example_tests/: learn_x_in_y_minutes.rs  learn_x_in_y_minutes_test.rs  mod.rs  spawn_test.rs  time_to_a_billion.rs
src/parsers/: fizzbuzz_test.rs  general.rs  general_test.rs  macro_test.rs  macros.rs  mod.rs  nana.rs  nana_test.rs
src/standard_library/: atom.rs  core.rs  core_test.rs  mod.rs
wit/: world.wit
