[package]
name = "nana"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:nana"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "wit/wasi/cli" }
"wasi:io" = { path = "wit/wasi/io" }
"wasi:clocks" = { path = "wit/wasi/clocks" }
"wasi:filesystem" = { path = "wit/wasi/filesystem" }
"wasi:sockets" = { path = "wit/wasi/sockets" }
"wasi:random" = { path = "wit/wasi/random" }
